feat: add user guide translation and improve admin username validation message

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -818,6 +818,7 @@
     "interest": "Interès",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitària",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tenir entre %min% i %max% nombres o lletres, sense espais, accents, ni altres caràcters.",
     "invalid-column-lenght": "%column% ha de tenir entre %min% i %max% caràcters.",
     "invalid-date": "Data %date% no vàlida.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Si desmarques l'ús de buits a factures i elimines alguna es quedarà el buit a la facturació i tindràs problemes amb hisenda",
     "user": "Usuari",
     "user-and-config": "Usuari i configuració",
+    "user-guide": "Guía de usuario",
     "users": "Usuaris",
     "using-apc": "Usant caché APC",
     "using-filecache": "Usant Filecache",
