--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -579,7 +579,7 @@
     "errors": "Errores",
     "es_EC": "Španělština (Ekvádor)",
     "es-tax-exception-art-14": "Daňová výjimka (čl. 14)",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "Španělsko: N3 Nepodléhá dle čl. 7 LIVA – Operace nepodléhající (vklady, převod UEA, vzorky…)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -818,6 +818,7 @@
     "interest": "Interés",
     "international-identifier": "Identificación internacional",
     "intra-community": "Uvnitřúnijní",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "El código introducido (%value%) no es válido. (%column%) debe tener entre %min% y %max% números o letras, sin espacios, acentos, ni otros caracteres.",
     "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
     "invalid-date": "Fecha %date% no válida.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Pokud odškrtnete použití mezer ve fakturách a některá odstraníte, zůstane v fakturaci mezera a budete mít problémy s pokladnou",
     "user": "Usuario",
     "user-and-config": "Uživatel a konfigurace",
+    "user-guide": "Guía de usuario",
     "users": "Usuarios",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
