--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -818,6 +818,7 @@
     "interest": "Zins",
     "international-identifier": "Internationale Kennung",
     "intra-community": "Innergemeinschaftlich",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "Ungültiger alphanumerischer Code",
     "invalid-column-lenght": "%column% muss zwischen %min% und %max% Zeichen haben.",
     "invalid-date": "Datum %1$s ungültig.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Wenn Sie die Verwendung von Lücken in Rechnungen abwählen und eine löschen, bleibt die Lücke in der Abrechnung und Sie haben Probleme mit dem Finanzamt.",
     "user": "Benutzer",
     "user-and-config": "Benutzer und Konfiguration",
+    "user-guide": "Guía de usuario",
     "users": "Benutzer",
     "using-apc": "Verwenden des APC-Caches",
     "using-filecache": "Verwenden von Filecache",
