--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -818,6 +818,7 @@
     "interest": "Interesa",
     "international-identifier": "Nazioarteko identifikatzailea",
     "intra-community": "Dentro de la comunidad",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "(%value%) sartutako kodea baliogabea da. (%column%) %min% eta %max% bitarteko zenbaki edo letra kopurua eduki behar du espazio, azentu edo beste karaktere gabe.",
     "invalid-column-lenght": "%column% %min% eta %max% karaktere artean izan behar ditu.",
     "invalid-date": "%date% data ez da zuzena.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Fakturatzean zabor erabilera desmarkatzen baduzu eta zatira bat ezabatzen baduzu, zaborra fakturazioan geratuko da eta zeregitasun arazoa izango duzu",
     "user": "Erabiltzailea",
     "user-and-config": "Erabiltzaile eta konfigurazioa",
+    "user-guide": "Guía de usuario",
     "users": "Erabiltzaileak",
     "using-apc": "APC cachea erabiliz",
     "using-filecache": "Filecache erabiliz",
