--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -818,6 +818,7 @@
     "interest": "Interese",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "O código introducido (%value%) non é válido. (%column%) debe ter entre %min% e %max% números ou letras, sin espazos, acentos, nin outros caracteres.",
     "invalid-column-lenght": "%column% deben ter %min% and %max% caracteres.",
     "invalid-date": "Data %date% non válida.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Se desmarcas o uso de ocos en facturas e eliminas algunha quedarase o oco na facturación e terás problemas con facenda",
     "user": "Usuario",
     "user-and-config": "Usuario e configuración",
+    "user-guide": "Guía de usuario",
     "users": "Usuarios",
     "using-apc": "Usando caché APC",
     "using-filecache": "Usando Filecache",
