--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -818,6 +818,7 @@
     "interest": "Odsetki",
     "international-identifier": "Identyfikator międzynarodowy",
     "intra-community": "Intracomunitaria",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "Wprowadzony kod (%value%) jest nieprawidłowy. (%column%) powinien zawierać od %min% do %max% cyfr lub liter, bez spacji, akcentów ani innych znaków.",
     "invalid-column-lenght": "%column% musi mieć od %min% do %max% znaków.",
     "invalid-date": "Data %date% jest nieprawidłowa.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Jeśli odznaczysz używanie otworów w fakturach i usuniesz którąś, lukę pozostanie w fakturowaniu i będziesz mieć problemy z urzędem skarbowym",
     "user": "Użytkownik",
     "user-and-config": "Usuario y configuración",
+    "user-guide": "Guía de usuario",
     "users": "Użytkownicy",
     "using-apc": "Używając pamięci podręcznej APC",
     "using-filecache": "Używając pamięci podręcznej plików",
