--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -818,6 +818,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificação internacional",
     "intra-community": "Intra-comunitária",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "O código inserido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data %date% inválida.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Usuário",
     "user-and-config": "Usuário e configuração",
+    "user-guide": "Guía de usuario",
     "users": "Usuários",
     "using-apc": "Usando o cache APC",
     "using-filecache": "Usando o Filecache",
