--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -818,6 +818,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intra-comunitária",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "O código introduzido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Se desmarcar o uso de espaços em faturas e eliminar algum, o espaço ficará na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
     "user-and-config": "Utilizador e configuração",
+    "user-guide": "Guía de usuario",
     "users": "Comercial",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
