--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -818,6 +818,7 @@
     "interest": "Interés",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitària",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tindre entre %min% i %max% números o lletres.",
     "invalid-column-lenght": "La columna %column% ha de tindre entre %min% i %max% caràcters.",
     "invalid-date": "%date% no és una data vàlida.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Si desmarques l'ús d'espais en factures i en treus alguna es quedarà l'espai en la facturació i tindràs problemes amb hisenda",
     "user": "Usuari",
     "user-and-config": "Usuari i configuració",
+    "user-guide": "Guía de usuario",
     "users": "Usuaris",
     "using-apc": "Usant la caché APC",
     "using-filecache": "Usant el Filecache",
