--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -818,6 +818,7 @@
     "interest": "Intérêts",
     "international-identifier": "Identifiant international",
     "intra-community": "Intra-communautaire",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "Le code alphanumérique entré (%value%) est incorrect. (%column%) doit avoir entre %min% et %max% chiffres ou lettres, et ne pas comporter d'espaces, d'accents ou tout autre caractère.",
     "invalid-column-lenght": "%column% doit avoir entre %min% et %max% caractères.",
     "invalid-date": "Date %date% non valide.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Si vous désactivez l'utilisation des écarts de facturation et que vous supprimez une facture, l'écart restera sur la facture et vous aurez des problèmes avec l'administration fiscale.",
     "user": "Utilisateur",
     "user-and-config": "Utilisateur et configuration",
+    "user-guide": "Guía de usuario",
     "users": "utilisateurs",
     "using-apc": "Utilisation du cache APC",
     "using-filecache": "Utiliser Filecache",
