--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -818,6 +818,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificatore internazionale",
     "intra-community": "Intra-comunitaria",
+    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
     "invalid-alphanumeric-code": "Il codice inserito (%value%) non è valido. (%column%) deve contenere tra %min% e %max% numeri o lettere, senza spazi, accenti o altri caratteri.",
     "invalid-column-lenght": "%column% deve contenere tra %min% e %max% caratteri.",
     "invalid-date": "Data% 1 $ s non è valida.",
@@ -1713,6 +1714,7 @@
     "use-holes-invoices-esp": "Se deselezioni l'uso degli spazi nelle fatture e ne elimini una, rimarrà lo spazio nella fatturazione e avrai problemi con l'Agenzia delle Entrate",
     "user": "utente",
     "user-and-config": "Utente e configurazione",
+    "user-guide": "Guía de usuario",
     "users": "utenti",
     "using-apc": "Utilizzo della cache APC",
     "using-filecache": "Utilizzando Filecache",
