Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1081,7 +1081,7 @@
     "no-plugins-installed": "Nejsou nainstalovány žádné pluginy.",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Bez reference",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "Nebyly nalezeny žádné výsledky",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "no-updates-now": "V tuto chvíli nejsou žádné aktualizace",
