--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -231,7 +231,7 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "mudar",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Se esta instalação ficar online, você deve alterar a senha para uma mais segura.",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data de cobrança",
@@ -1081,7 +1081,7 @@
     "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "Nenhum resultado encontrado",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
     "no-updates-now": "Não há atualizações neste momento",
