--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -818,7 +818,7 @@
     "interest": "Interés",
     "international-identifier": "International identifier",
     "intra-community": "Intra-community",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "The administrator username is not valid: it must be between 3 and 50 characters, with no spaces.",
     "invalid-alphanumeric-code": "The alphanumeric code entered (%value%) is not valid. (%column%) must have between %min% and %max% numbers or letters, no spaces, accents or any other chraracter.",
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Invalid date %date%.",
@@ -1714,7 +1714,7 @@
     "use-holes-invoices-esp": "If you uncheck the use of gaps in invoices and delete some, the gap will remain in the billing and you will have problems with the treasury",
     "user": "User",
     "user-and-config": "User and configuration",
-    "user-guide": "Guía de usuario",
+    "user-guide": "User guide",
     "users": "Users",
     "using-apc": "Using APC cache",
     "using-filecache": "Using Filecache",
