--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -586,9 +586,9 @@
     "es-tax-exception-e4": "Spagna: eccezione per gli articoli 23 e 24 della legge sull'IVA",
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
-    "es-tax-exception-location-rules": "regole di eccezione fiscale per posizione",
+    "es-tax-exception-location-rules": "Spagna: N2 Non soggetto – Regole di localizzazione dei servizi (artt. 69–70 LIVA, servizi B2B UE o extra UE)",
     "es-tax-exception-n1": "es-tax-exception-n1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Spagna: N5 Esente",
     "es-tax-exception-passive-subject": "Spagna: N6 inversione del soggetto passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
