Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1714,7 +1714,7 @@
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Usuário",
     "user-and-config": "Usuário e configuração",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Guia do usuário",
     "users": "Usuários",
     "using-apc": "Usando o cache APC",
     "using-filecache": "Usando o Filecache",
