--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1008,7 +1008,7 @@
     "method-payment": "Zahlungsart",
     "mime-type": "Mime-Typ",
     "min-fs-version": "Minimale Core-Version",
-    "min-php-version": "Min. v. PHP",
+    "min-php-version": "Min. PHP-Version",
     "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
     "minimum-amount-without-cifnif": "Mindestbetrag ohne CIF\/NIF",
     "minimum-stock": "Mindestbestand",
@@ -1714,7 +1714,7 @@
     "use-holes-invoices-esp": "Wenn Sie die Verwendung von Lücken in Rechnungen abwählen und eine löschen, bleibt die Lücke in der Abrechnung und Sie haben Probleme mit dem Finanzamt.",
     "user": "Benutzer",
     "user-and-config": "Benutzer und Konfiguration",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Benutzerhandbuch",
     "users": "Benutzer",
     "using-apc": "Verwenden des APC-Caches",
     "using-filecache": "Verwenden von Filecache",
