--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -587,7 +587,7 @@
     "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
     "es-tax-exception-location-rules": "règles d'exception fiscales espagnoles",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Exception fiscale ES N1",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "sujet passif d'exception fiscale",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
