--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1408,7 +1408,7 @@
     "sdk": "SDK",
     "search": "Ricerca",
     "search-document": "Inserisci il numero di %doctype% per cercare.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Cerca in tutte le pagine del programma",
     "search-message": "Cerca messaggio",
     "search-product": "Cerca prodotto",
     "second-hand": "Di seconda mano",
