--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1714,7 +1714,7 @@
     "use-holes-invoices-esp": "Jeśli odznaczysz używanie otworów w fakturach i usuniesz którąś, lukę pozostanie w fakturowaniu i będziesz mieć problemy z urzędem skarbowym",
     "user": "Użytkownik",
     "user-and-config": "Usuario y configuración",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Przewodnik użytkownika",
     "users": "Użytkownicy",
     "using-apc": "Używając pamięci podręcznej APC",
     "using-filecache": "Używając pamięci podręcznej plików",
