--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -636,7 +636,7 @@
     "export-bill": "Factura d'exportació",
     "extra-file": "Archiu extra",
     "failed": "Fallit",
-    "fails": "Fallos",
+    "fails": "Errors",
     "families": "Famílies",
     "family": "Familia",
     "family-code": "Còdic de la família",
@@ -1418,7 +1418,7 @@
     "select": "select",
     "select-all": "Seleccionar tot",
     "select-content-for": "Selecciona contingut per %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Pots afegir un fitxer des d'aquí: selecciona'l i puja'l des del teu ordinador. Prem el botó «cap» si el que vols és no seleccionar cap fitxer.",
     "select-none": "Seleccionar res",
     "select-plugin-zip-file": "Selecciona el plugin (zip):",
     "select-user": "Selecciona l'usuari",
