Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -818,7 +818,7 @@
     "interest": "Interés",
     "international-identifier": "Identificación internacional",
     "intra-community": "Uvnitřúnijní",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "Uživatelské jméno administrátora není platné: musí mít mezi 3 a 50 znaky, bez mezer.",
     "invalid-alphanumeric-code": "El código introducido (%value%) no es válido. (%column%) debe tener entre %min% y %max% números o letras, sin espacios, acentos, ni otros caracteres.",
     "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
     "invalid-date": "Fecha %date% no válida.",
@@ -1658,7 +1658,7 @@
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "two-factor-auth": "2fázové ověření",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Deaktivovat dvoufaktorové ověření",
     "two-factor-auth-disabled": "Dvoufázové ověření je deaktivováno",
     "two-factor-auth-enable": "Aktivovat dvoufaktorové ověření",
     "two-factor-auth-enabled": "Dvoufázové ověření je aktivováno",
