Actualizadas las traducciones

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1705,7 +1705,7 @@
     "updates-available": "Dostupné aktualizace",
     "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktuátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
     "updates-beta-warning": "Beta aktualizace jsou povoleny",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Máte zapnuté beta aktualizace. Tyto aktualizace nebyly testovány a doporučují se pouze v testovacích instalacích.",
     "updating-attached-relations": "Aktualizace připojených vazeb",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
