--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -901,7 +901,7 @@
     "last-activity": "Dernière Activité",
     "last-bimester": "Dernier bimestre",
     "last-block": "Dernier bloc",
-    "last-duration": "Dernière durée",
+    "last-duration": "Durée précédente",
     "last-ip": "Dernière adresse IP",
     "last-month": "Le mois dernier",
     "last-price-estimation": "Dernière estimation de prix",
