--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1545,7 +1545,7 @@
     "subtotal": "Suma częściowa",
     "subtract": "Odjąć",
     "success": "Sukces",
-    "successive-tract": "successive-tract",
+    "successive-tract": "Kolejny odcinek",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "Suma netto linii podatku musi wynosić: %lineNet%",
     "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
