--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -818,7 +818,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificação internacional",
     "intra-community": "Intra-comunitária",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "O nome de usuário do administrador não é válido: deve ter entre 3 e 50 caracteres, sem espaços.",
     "invalid-alphanumeric-code": "O código inserido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data %date% inválida.",
@@ -1408,7 +1408,7 @@
     "sdk": "SDK",
     "search": "Pesquisar",
     "search-document": "Digite o número do %doctype% para pesquisar.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Pesquisar em todas as páginas do programa",
     "search-message": "Buscar mensagem",
     "search-product": "Buscar produto",
     "second-hand": "Segunda mão",
